2004-12-14  Todd Berman  <tberman@off.net>
	
	* Gui/SourceEditorBuffer.cs: Single line commenting changed a bit.
	Fixed bug #70574.

2004-12-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Search/SearchReplaceUtilities.cs: 
	* Search/SearchStrategy/BruteForceSearchStrategy.cs: Word boundaries
	can be white spaces or punctuation chars. Added new method 
	IsWordSeparator that checks both.

2004-12-11  Alexandre Gomes <alexmipego@hotmail.com>
	
	* Gui/SourceEditorDisplayBinding.cs: Added support for the already
	implemented Indent and UnIndent selection.

2004-12-10  Alexandre Gomes <alexmipego@hotmail.com>
	
	* Gui/SourceEditorDisplayBinding.cs:
	* Gui/SourceEditorBuffer.cs: Keys 'Home' and 'End' while having
	selected text now moves to Start/End of selection instead of Start/End
	of insertmark line.
	
2004-12-07  Alexandre Gomes <alexmipego@hotmail.com>
	
	* Gui/SourceEditorDisplayBinding.cs,
	* Gui/SourceEditorBuffer.cs: Added implementation for CommentCode and
	UncommentCode

2004-12-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/Pads/CompilerMessageView.cs: Subscribe to service events using
	gui-thread aware delegates. Use Runtime class to access services.
	* Search/SearchReplaceInFilesManager.cs: TaskService is now gui-thread
	safe, so this class can be simplified.

2004-12-06  Lluis Sanchez Gual  <lluis@novell.com>

	* InsightWindow/MethodInsightDataProvider.cs:
	* InsightWindow/IndexerInsightDataProvider.cs:
	* CodeCompletion/CodeCompletionData.cs:
	* CodeCompletion/CommentCompletionDataProvider.cs:
	* CodeCompletion/CodeCompletionDataProvider.cs: ClassBrowserIconsService
	methods are now in IconService.

2004-12-03  Alp Toker  <alp@atoker.com>

	* CodeCompletion/CompletionListWindow.cs: Fix tooltip positioning.

2004-12-03  Todd Berman  <tberman@off.net>

	* Gui/SourceEditorBuffer.cs:
	* Gui/SourceEditorView.cs:
	* Gui/SourceEditorDisplayBinding.cs:
	* CodeCompletion/CompletionListWindow.cs:
	* CodeCompletion/CompletionWindow.cs: Update to new gtk# API.
